GNOME Bugzilla – Bug 777867
Closing the properties before determining the edited state of an item shouldn't affect subsequent attempts to load the same item
Last modified: 2017-02-28 08:56:26 UTC
I shoot with a Fuji, which uses the .RAF format for its raw files. It looks like Photos tries to display these but fails - every .RAF in the image grid is a blank placeholder, and when I try to open one I see a spinner endlessly turning. It would be great to support .RAF but, if that's not possible, it might be best not to show these files at all in Photos.
Could you please check if you can open .RAF files in shotwell? Also, would it be possible for you to attach a sample .RAF file? I think it is just a matter of adding the MIME type to the libraw-based RAW loader.
Yes, I can open those files with Shotwell.
Here's a .RAF file you can try: https://dl.dropboxusercontent.com/u/5031519/DSCF3046.RAF
GEGL's RAW loader does support the image/x-fuji-raf MIME type, but it seems there is something dodgy going on. On some attempts, the image did get rendered after a while, but it also seemed to fail (I didn't even see a spinner) once. I guess we need to compare it with shotwell's loader and see what's going on here. Reassigning to GEGL.
I think the bug is actually in the application. Moving back to gnome-photos.
(In reply to Allan Day from comment #0) > I shoot with a Fuji, which uses the .RAF format for its raw files. It looks > like Photos tries to display these but fails - every .RAF in the image grid > is a blank placeholder, and when I try to open one I see a spinner endlessly > turning. There are two bugs here: (a) The lack of a thumbnail affects some other RAW files too (bug 778745). Those that can be handled by GdkPixbuf's TIFF loader (eg., Canon's CR2s) do get thumbnailed. Others don't. (b) I suspect that you opened the properties dialog before trying to open the image. The properties dialog tries to figure out if the image is edited or not (bug 763156). That can take a while for RAW files. If the dialog is closed before that is finished, then the next attempt to actually open the item can fail. Let's narrow the focus of this bug to (b).
(In reply to Debarshi Ray from comment #6) > (In reply to Allan Day from comment #0) > > I shoot with a Fuji, which uses the .RAF format for its raw files. It looks > > like Photos tries to display these but fails - every .RAF in the image grid > > is a blank placeholder, and when I try to open one I see a spinner endlessly > > turning. > > There are two bugs here: > > (a) The lack of a thumbnail affects some other RAW files too (bug 778745). > Those that can be handled by GdkPixbuf's TIFF loader (eg., Canon's CR2s) do > get thumbnailed. Others don't. > > (b) I suspect that you opened the properties dialog before trying to open > the image. The properties dialog tries to figure out if the image is edited > or not (bug 763156). That can take a while for RAW files. If the dialog is > closed before that is finished, then the next attempt to actually open the > item can fail. Ok, there is a third problem that it can take a while to decode some big fat RAW files. We can assuage that by quickly loading a lower quality preview or something. Let's use a separate bug for that.
Created attachment 346876 [details] [review] base-item: Force load_buffer_async to return as soon as it's cancelled
Created attachment 346890 [details] [review] base-item: Clean up the leftovers when _base_item_load_async fails