base-item: Force load_buffer_async to return as soon as it's cancelled

Since gegl:load isn't interruptible, we need to resort to the GTask's
return-on-cancel flag to have a cancellable wrapper around.

https://bugzilla.gnome.org/show_bug.cgi?id=777867